src/components/contact/contact.scss
@import '../../styles/styles.scss';

.contact-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    position: relative;
    top: -122px;
    padding-top: 120px;
    margin-bottom: -159px;
    color: $page-text-color;
    background-color: $page-background-color;
    z-index: -1;
    @include tablet {
        top: -72px;
        margin-bottom: 0;
    }
    @include phone {
        top: -25px;
        padding-top: 60px;
        margin-bottom: 0;
    }

    .cta-wrapper {
        margin-top: 3em;
        h2 {
            color: $page-text-color;
        }
    }

    #contact-form {
        width: 80%;
        max-width: 800px;
        margin-top: 7em;

        .contact-form-field-wrapper {
            width: 100%;
            margin-bottom: 2em;
            text-align: left;
            
            label {
                position: relative;
                top: -2em;
                left: 5px;
                color: $form-inactive-border-color;
                font-size: 16px;
                letter-spacing: 2px;
                line-height: 23px;
                transition: all .2s linear;

                @include phone {
                    color: $form-text-color-mobile;
                    font-size: 14px;
                    letter-spacing: 1.75px;
                    line-height: 20px;
                }
            }
            input {
                width: 100%;
                border: none;
                border-bottom: 1px solid $form-inactive-border-color;
                background-color: inherit;
                
                &:focus + label {
                    /* transform: scale(0.5) translate(-50%, -50%); */
                    color: $appstem-green;
                    top: -40px;
                    font-size: 0.75em;
                }
                &:focus,
                textarea:focus {
                    border-bottom: 1px solid $form-active-border-color;
                }
            }
        }
    
        .contact-form-submit {
            margin-top: 5em;
        }
    }


    .view-openings-wrapper {
        width: 100%;
        text-align: center;
        margin: 220px 0;

        h2 {
            color: $form-heading-color;
            font-family: $primary-font-family;
            font-size: 32px;
            font-weight: normal;
            letter-spacing: 6.4px;
            line-height: 46px;
            text-align: center;
        }
        p {
            margin: 70px 0 80px 0;
            font-size: 20px;
            line-height: 40px;
            color: $form-heading-color;
            @include phone {
                padding: 0 1em;
            }
        }
        .openings-link {
            color: $form-text-color-mobile;
            font-size: 16px;
            letter-spacing: 3.29px;
            line-height: 24px;
            & > .openings-link-arrow {
                color: $form-text-color-mobile;
                position: relative;
                top: -2px;
                left: 2px;
                font-size: 1em;
            }
        }
    }
        
}

